--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -76,12 +76,13 @@
 
 .footer__contacts_link:hover {
   cursor: pointer;
+  font-weight: 500;
 }
 
 .footer__contacts_link::after {
   display: block;
   content: attr(title);
-  font-weight: bold;
+  font-weight: 500;
   overflow: hidden;
   visibility: hidden;
   height: 0;
@@ -123,6 +124,7 @@
 
 .footer__info_link:hover {
   cursor: pointer;
+  font-weight: 500;
 }
 .footer__info_link::after {
   display: block;
@@ -172,6 +174,7 @@
 
 .footer__copyright_text-ref:hover {
   cursor: pointer;
+  font-weight: 500;
 }
 
 .footer__copyright_text-ref::after {
