--- a/src/components/main/howToBecome/howToBecome.css
+++ b/src/components/main/howToBecome/howToBecome.css
@@ -183,7 +183,7 @@
 
 .howToBecome__button {
   margin: 0;
-  padding: 0;
+  padding: 0 50px;
   border: 0;
   border-radius: 60px;
   background: var(--blue);
@@ -197,7 +197,6 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 125%;
-  display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
